<resources>
    <string name="app_name">Qme</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to Qme!</string>
    <string name="slide_1_desc">Ask the hardest questions and get the simplest answer from all ove the world </string>

    <string name="slide_2_title">Ask a question</string>
    <string name="slide_2_desc">People will answer yes/no for your dilemma and you can decide by the statistics! </string>

    <string name="slide_3_title">Answer other people questions</string>
    <string name="slide_3_desc">answer yes/no for other people dilemmas and help solve their problems!</string>

    <string name="slide_4_title">Comment</string>
    <string name="slide_4_desc">Comment other people questions and they can comment yours!</string>

    <string name="slide_1_title_heb">ברוך הבא ל QME!</string>
    <string name="slide_1_desc_heb">שאל את השאלות הקשות ביותר ותשיג את התשובה הפשוטה והמהירה ביותר מכל קצוות העולם</string>

    <string name="slide_2_title_heb">שאל כל שאלה</string>
    <string name="slide_2_desc_heb">אנשים יענו בכן או לא לדילמה שמעסיקה אותך ויעזרו לפתור לך את הבעיות!</string>

    <string name="slide_3_title_heb">ענה לשאלות של אחרים </string>
    <string name="slide_3_desc_heb">תוכל לענות בכן או לא לשאלות של אנשים אחרים ולעזור להם לפתור את הדילמות בחייהם!</string>

    <string name="slide_4_title_heb">תוכל להגיב ולהביע דעה</string>
    <string name="slide_4_desc_heb">רשום תגובה לשאלות של אחרים וקבל תגובות לשאלותיך</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_user_profile">UserProfile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_sucsses">Register Complited</string>
    <string name="action_sign_up_Failed">ההרשמה נכשלה</string>
    <string name="error_invalid_email">נא למלא דואר אלקטרוני תקין</string>
    <string name="error_invalid_password">סיסמה קצרה מדי</string>
    <string name="error_invalid_password2">סיסמאות לא תואמות</string>
    <string name="error_incorrect_password">סיסמה לא נכונה</string>
    <string name="error_field_required">נא למלא את השדה</string>
    <string name="error_invalid_username">שם שמתמש זה קיים כבר</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="error_invalid_age">"עליך להיות מעל לגיל 13"</string>



    <string name="prompt_email">דואר אלקטרוני</string>
    <string name="short_story">קצת על עצמך במשפט</string>
    <string name="prompt_password">סיסמה</string>
    <string name="action_sign_in">כניסה</string>
    <string name="action_sign_up">הרשמה רגילה</string>
    <string name="notSignedIn">לא מחובר</string>

    <string name="username">שם משתמש</string>
    <string name="firstname">שם פרטי</string>
    <string name="surname">שם משפחה</string>
    <string name="age">גיל</string>


    <string name="passwordconfirmation">אמת סיסמה</string>
    <string name="cancel">ביטול</string>
    <string name="nav_signout">התנתק</string>
    <string name="nav_questions">שאלות של כולם</string>
    <string name="nav_profile">אזור אישי</string>
    <string name="nav_myQuestions">השאלות שלי</string>



    <string name="male">זכר</string>
    <string name="female">נקבה</string>
    <string name="gender">מין</string>
    <string name="nogender">אחר</string>


    <string name="DeleteQuestion">בטוח?</string>
    <string name="DeleteQuestionTitleAlert">האם למחוק את השאלה?</string>
    <string name="YesButtonAlert">כן</string>
    <string name="NoButtonAlert">לא</string>
    <string name="TellAboutYourself">ספר על עצמך..</string>


    <string name="upload_picture_question">העלה תמונה לשאלה</string>


    <string name="addComment">הוסף תגובה</string>
    <string name="EmptyComment">לא ניתן להוסיף תגובה ריקה</string>




    <string name="send_verification_message_error">עליך לאמת את המשתמש במייל</string>
    <string name="send_verification_message">האם לשלוח אימות נוסף למייל?</string>



</resources>
