<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AlertDialogTheme">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:maxLength="150"
        android:hint="@string/TellAboutYourself"
        android:id="@+id/alrt_edit_tellAboutYourself"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="60dp"
            android:padding="10dp"
            android:src="@drawable/no_select"
            android:text="@string/NoButtonAlert"
            android:id="@+id/alrt_btn_No"/>


        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginStart="60dp"
            android:padding="10dp"
            android:text="@string/YesButtonAlert"
            android:src="@drawable/yes_select"
            android:id="@+id/alrt_btn_Yes"/>


    </LinearLayout>



</LinearLayout>